UI: Final fix for AppLauncher vertical alignment

--- a/components/console/app-launcher/AppLauncher.css
+++ b/components/console/app-launcher/AppLauncher.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
   width: 100%;
   padding: 20px;
